--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,31 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.kotlin_version = '1.3.21'
+    ext.gradle_plugin_version = '3.2.1'
+    ext.androidx_version = '1.0.2'
+    ext.android_support_version = '28.0.0'
+    ext.dagger_version = '2.16'
+    ext.junit_version = '4.12'
+    ext.androidx_junit_version = '1.0.0-beta02'
+    ext.rxandroid2_version = '2.0.1'
+    ext.rxjava2_version = '2.1.3'
+    ext.gson_version = '2.8.1'
+    ext.mockito_version = '2.22.0'
+    ext.mockito_kotlin_version = '1.6.0'
+    ext.test_runner_version = '1.1.0-alpha4'
+    ext.test_rule_version = '1.1.0'
+    ext.arch_version = '2.0.0'
+    ext.espresso_version = '3.1.0-beta01'
+    ext.constraint_layout_version = '1.1.3'
+    ext.databinding_version = '3.2.1'
+    ext.retrofit_version = '2.5.0'
+    ext.logging_interceptor_version = '3.9.1'
+    ext.idling_resource_test_version = '3.1.0-beta01'
+    ext.idling_resource_version = '1.0.0'
+    ext.rxjava_retrofit_adapter_version = '1.0.0'
+    ext.mock_webserver_version = '3.9.0'
+    ext.androidx_support_annotations_version = '1.0.1'
+    ext.androidx_constraint_layout_version = '1.0.0'
+    ext.androidx_version = '1.0.2'
     repositories {
         google()
         jcenter()
@@ -10,16 +34,15 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        maven { url "https://maven.google.com" }
         google()
         jcenter()
-        
     }
 }
 
