--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
-    ext.gradle_plugin_version = '3.2.1'
+    ext.gradle_plugin_version = '3.4.0'
     ext.androidx_version = '1.0.2'
     ext.android_support_version = '28.0.0'
     ext.dagger_version = '2.16'
@@ -33,7 +33,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath "com.android.tools.build:gradle:$gradle_plugin_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
     }
