--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
     ext.androidx_support_annotations_version = '1.0.1'
     ext.androidx_constraint_layout_version = '1.0.0'
     ext.androidx_version = '1.0.2'
+    ext.mockito_kotlin_version = '1.6.0'
 
     repositories {
         google()
