--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ allOpen {
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "demo.mytaxitest"
+        applicationId "gyg.demo.mytaxitest"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
@@ -60,6 +60,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
+    implementation "com.google.android.gms:play-services-maps:$google_maps_version"
+    implementation "androidx.appcompat:appcompat:$androidx_version"
     testImplementation "com.squareup.okhttp3:mockwebserver:$mock_webserver_version"
 
     // Dagger
