--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
     ext.androidx_constraint_layout_version = '1.0.0'
     ext.androidx_version = '1.0.2'
     ext.mockito_kotlin_version = '1.6.0'
+    ext.google_maps_version = '16.1.0'
 
     repositories {
         google()
