Abstracted some basic Activity logic into BaseActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TestSingleFragmentActivity"/>
+        <activity android:name=".core.BaseActivity"/>
     </application>
 
 </manifest>
